fix: permit dual auth paths, allow wildcard origins/headers in CORS, and normalize API base URL